Geo-Wall-E/Samples/Errors/RedeclarationOfArgument.gs
//This is a G# program with errors.

point p1 "Life is beautifil";

point p2 "Its `beautiful` p1";

point p1 "You have a `point` (_^_)"; //Redeclaration of point p1